estilos al glosario

--- a/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
@@ -83,11 +83,11 @@
 
             <div class="uk-container  uk-margin-auto" >
                 <h1 class="lescuadron letra-titulo sombra-titulo">Glossary</h1>
+
                 <ui:repeat value="#{glosarioControlador.glosarioModeloLista}" var="glosario">
-                    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid="">
+                    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin tam-card" uk-grid="">
                         <div class="uk-card-media-left uk-cover-container">
-                            <img src="#{request.contextPath.concat('/imagen-glosario?palabra='.concat(glosario.palabra).concat('&amp;clave=').concat(glosario.claseGlosarioModelo.clave))}" uk-cover="" alt="imagen"/>
-                            <canvas  height="350"/>
+                            <img src="#{request.contextPath.concat('/imagen-glosario?palabra='.concat(glosario.palabra).concat('&amp;clave=').concat(glosario.claseGlosarioModelo.clave))}" class="glosario-img" alt="imagen"/>
                         </div>
                         <div>
                             <div class="uk-card-body">
@@ -99,6 +99,7 @@
                         </div>
                     </div>
                 </ui:repeat>
+
             </div>
 
         </div>
