--- a/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
@@ -86,7 +86,7 @@
 
                 <ui:repeat value="#{glosarioControlador.glosarioModeloLista}" var="glosario">
                     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin tam-card" uk-grid="">
-                        <div class="uk-card-media-left uk-cover-container">
+                        <div class="uk-card-media-left uk-cover-container contenedor-img">
                             <img src="#{request.contextPath.concat('/imagen-glosario?palabra='.concat(glosario.palabra).concat('&amp;clave=').concat(glosario.claseGlosarioModelo.clave))}" class="glosario-img" alt="imagen"/>
                         </div>
                         <div>
