--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -74,7 +74,7 @@
                                         </h:panelGroup>
                                         <!--                                    <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>-->
                                     </div>
-                                    <div class="uk-card-body">
+                                    <div class="uk-card-body tecolotl-card">
                                         <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
                                         <p class="uk-text-small uk-text-muted ">#{actividadModelo.nivelLenguaje}</p>
                                     </div>
