--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -95,19 +95,14 @@
                                          <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.email']}:</span> #{alumnoControlador.alumnoModelo.correoPadreFamilia}</p>
                                          <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top  uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.grade']}:</span> #{detalleAlumnoControlador.detalleAlumnoModelo.grado} <span class="uk-text-bold">&nbsp;Group:</span> #{detalleAlumnoControlador.detalleAlumnoModelo.grupo}</p>
                                          <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.nivel']}:</span> #{alumnoControlador.alumnoModelo.nivelLenguajeModelo.valor}</p><p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold">Academic Year: </span><h:outputText value="#{detalleAlumnoControlador.detalleAlumnoModelo.inicio}"><f:convertDateTime type="date" pattern="yyyy/MM/dd"/></h:outputText> </p>
-                                         <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-primary">#{alumno['dashboard.edit.profile']}:</span></p>
                                      </div>
                                  </h:panelGroup>
                              </div>
                              <div class="uk-card-body padding-card-body">
-                                 <h3 class="uk-text-uppercase uk-text-bold">#{alumno['dashboard.homework']}</h3>
-                                 <div  uk-grid="" class="">
-                                     <div class="uk-width-1-1@m uk-margin-remove-top"><div class="uk-text-center">#{alumno['dashboard.total.activities']}</div></div>
-                                     <div class="uk-width-auto uk-margin-remove-top " style="font-weight: bold; color:black;" >0%</div>
-                                     <div class="uk-width-expand uk-padding-remove-left uk-margin-remove-top">
-                                         <progress class="uk-progress " value="#{detalleAlumnoControlador.detalleAlumnoModelo.totalTareas}" max="5"/>
-                                     </div>
-                                     <div class="uk-width-auto uk-padding-remove-left uk-margin-remove-top" style="font-weight: bold;color:black;">100%</div>
+                                 <ui:remove><h3 class="uk-text-uppercase uk-text-bold">#{alumno['dashboard.homework']}</h3></ui:remove>
+                                 <div class="imagen-actividad " id="video-actividad">
+                                     <div class="uk-text-center">#{alumno['dashboard.total.activities']}</div>
+
                                  </div>
                              </div>
                              <div class="uk-card-footer">
@@ -118,25 +113,28 @@
                      </div>
                      <div class="uk-width-2-3@m">
                          <div class="uk-section uk-border-rounded border-section uk-padding-remove color-card-dashboard-alumno" style="position:relative;padding-top:52.25%;">
-                             <div style="position:relative;padding-top:52.25%;" class="uk-margin-auto">
-                                 <iframe src="https://www.youtube.com/embed/0_1NU60qHWs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+                             <div style="position:relative;padding-top:52.25%;" class="uk-margin-auto" >
+                                 <iframe  src="https://www.youtube.com/embed/0_1NU60qHWs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
                              </div>
                          </div>
                      </div>
                  </h:panelGroup>
-                <h1 class="lescuadron letra-titulo uk-text-center uk-margin-large-top">#{empty alumnoControlador.tareaActvidadModeloLista ? alumno['dashboard.not.homework'] : alumno['dashboard.homework.done']}</h1>
+                <h1 class="lescuadron letra-titulo uk-text-center ">#{empty alumnoControlador.tareaActvidadModeloLista ? alumno['dashboard.not.homework'] : alumno['dashboard.homework.done']}</h1>
                 <div>
                     <h:form styleClass="formulario-tareas-progreso" >
                         <h:selectOneRadio value="#{tareasProgresoControlador.idTarea}">
                             <f:selectItems value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActividad"  itemLabel="#{tareaActividad.idActividad}" itemValue="#{tareaActividad.id}"/>
-                            <f:ajax event="change" listener="#{tareasProgresoControlador.buscaTareasRealizadas}" execute="@form" render="tareas tareas2"/>
+                            <f:ajax event="change" listener="#{tareasProgresoControlador.buscaTareasRealizadas}" execute="@form" render="tareas tareas2 video-actividad"/>
                         </h:selectOneRadio>
                     </h:form>
                     <ul>
                         <li class="">
+
                             <!--<h:graphicImage styleClass="vacio" library="img" name="/alumno/pop-art/mensaje5.svg" pt:uk-svg=""/>-->
                             <h:panelGroup layout="block" styleClass="vacio" rendered="#{empty alumnoControlador.tareaActvidadModeloLista}">empty</h:panelGroup>
+
                             <h:panelGroup id="tareas" styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}">
+
                                 <div class="imagen-flexible">
                                     <h:graphicImage styleClass="img-alumno-dashboard uk-display-block uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[0].tarea}; pos: right"/>
                                    <div class="contenedor-barra">
@@ -204,7 +202,42 @@
         <script type="application/javascript">
             document.addEventListener("DOMContentLoaded", radio);
             function radio() {
-                document.getElementById('j_idt63:j_idt64:0').click();
+                var contenedorVideo = document.querySelector('#video-actividad');
+                var imagen = document.createElement('img');
+                var videos = [];
+                var linkVideo = "https://www.youtube.com/embed/";
+                var linkImagen = "https://i.ytimg.com/vi/";
+                var botones = document.querySelectorAll('.formulario-tareas-progreso  tbody > tr > td > input[type=radio]');
+                var boton = document.querySelector('.formulario-tareas-progreso  tbody > tr > td:first-child > input[type=radio]');
+                boton.click();
+                var idVideos = document.querySelectorAll('.formulario-tareas-progreso  tbody > tr > td > label');
+                idVideos.forEach(function (id) {
+                    videos.push(id.innerHTML);
+                });
+
+                while (contenedorVideo.hasChildNodes()){
+                    contenedorVideo.removeChild(contenedorVideo.firstChild);
+                }
+                var linkCompleto = linkImagen.concat(videos[0].trim());
+                imagen.setAttribute('src',linkCompleto.concat('/mqdefault.jpg'));
+                contenedorVideo.appendChild(imagen);
+                console.log(videos);
+                botones.forEach(function (evento ,index) {
+                    evento.addEventListener('click',function (dato) {
+                         var actividad = document.querySelector('#video-actividad iframe');
+                         var imagen = document.createElement('img');
+                         while (contenedorVideo.hasChildNodes()){
+                             contenedorVideo.removeChild(contenedorVideo.firstChild);
+                         }
+                         // actividad.removeAttribute('src');
+                         // actividad.setAttribute('src',linkVideo.concat(videos[index].trim()));
+                         // console.log(linkVideo.concat(videos[index].trim()));
+                        var linkCompleto = linkImagen.concat(videos[index].trim());
+                         imagen.setAttribute('src',linkCompleto.concat('/mqdefault.jpg'));
+                        contenedorVideo.appendChild(imagen);
+                    });
+                });
+
             }
         </script>
     </ui:define>
