se solucionan incidencias de las actividades

--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -175,16 +175,16 @@
                                 </div>
 
                                <div class="fondo-more uk-position-relative uk-visible@m">
-                                   <div class="more-uno">
+                                   <div class="more-uno uk-text-center">
                                        <h:outputText value="#{hablarControlador.hablarModeloLista[0].tarjeta}"/>
                                    </div>
-                                   <div class="more-dos">
+                                   <div class="more-dos uk-text-center">
                                        <h:outputText value="#{hablarControlador.hablarModeloLista[1].tarjeta}"/>
                                    </div>
-                                   <div class="more-tres">
+                                   <div class="more-tres uk-text-center">
                                        <h:outputText value="#{hablarControlador.hablarModeloLista[2].tarjeta}"/>
                                    </div>
-                                   <div class="more-cuatro">
+                                   <div class="more-cuatro uk-text-center">
                                        <h:outputText value="#{hablarControlador.hablarModeloLista[3].tarjeta}"/>
                                    </div>
                                </div>
