--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -315,9 +315,9 @@
                     cambio.classList.add('boton-listo');
                     var div = document.createElement('div');
                     div.classList.add('realizado', 'movimiento');
-                    var responder = document.createElement('span');
-                    responder.textContent = "Responder";
-                    div.appendChild(responder);
+                    // var responder = document.createElement('span');
+                    // responder.textContent = "Responder";
+                    // div.appendChild(responder);
                     data.source.parentElement.parentElement.appendChild(div);
                 }
             }
